test/zipkin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zipkin
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - zipkin.testing.freestyleiot.com
    secretName: zipkin-tls

  rules:
  - host: zipkin.testing.freestyleiot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin
          servicePort: 9411
